<resources>
    <string name="app_name">水尺计算助手</string>
    <string name="loading_wait">加载中，请稍后...</string>
    <string name="error_tip_no_network">网络异常，请检查网络。</string>
    <string name="loading_dialog_init_msg">正在加载...</string>
    <string name="pull_up_more">上拉更多</string>
    <string name="no_more">没有更多！</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="tips_confirm">提示</string>
    <string name="no_contacts_permission"></string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="reg_account">注册账号</string>
    <string name="find_pwd">更改密码</string>
    <string name="finish_profile">完善资料</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="go_to_login">去登录</string>
    <string name="go_to_find_pwd">找回密码</string>
    <string name="text_login_phone_hint">请输入手机号码</string>
    <string name="text_reg_varify_hint">请输入验证码</string>
    <string name="text_login_pwd_hint">请输入密码</string>
    <string name="get_valify_code_success">获取验证码成功</string>
    <string name="get_valify_code_failed">获取验证码失败</string>
    <string name="re_send_valify_code_delay">%1$d秒后可再发送</string>
    <string name="re_send_valify_code">重新发送</string>
    <string name="error_phone_input">请输入正确的手机号码</string>
    <string name="waiting_for_send_varify">正在发送中...</string>
    <string name="err_send_varify">请发送验证码</string>
    <string name="register_sucess">注册成功！</string>
    <string name="change_pwd_sucess">修改密码成功！</string>
    <string name="login_sucess">登录成功！</string>
    <string name="hint_please_input_your_name">请输入你的真实姓名</string>
    <string name="hint_please_input_your_nickname">请输入昵称，最长24个字</string>
    <string name="hint_please_input_your_idcard">请输入16或18位身份证号</string>
    <string name="file_save_path">图片已保存到%1$s</string>
    <string name="storage_is_full">存储空间已满</string>
    <string name="sdcard_not_found">SD卡检测到未安装，请确认是否已正确安装。</string>
    <string name="image_illegal">图片读取失败</string>
    <string name="gif_length_limit">图片太大,建议上传2M以内的动态图片</string>
    <string name="memory_not_enough">下载失败，存储空间不足</string>
    <string name="img_load_failed">图片读取失败</string>
    <string name="file_default_photo">默认头像, 无需保存</string>
    <string name="choose_early_start">请先选择发起时间</string>
    <string name="image_format_error">图片格式错误</string>
    <string name="image_select_limit">最多可选择%1$d张图片</string>
    <string name="all_photo">所有图片</string>
    <string name="recv_photo">收到的图片</string>
    <string name="add_activity_albumSelect">相册</string>
    <string name="finish_count">确定(%1$s/%2$s)</string>
    <string name="page">%1$s张</string>
    <string name="preview">预览</string>
    <string name="photo">照片</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_me">鉴定报告</string>
    <string name="tab_group">后测</string>
    <string name="tab_constant">常数计算</string>
    <string name="tab_visit">中测</string>
    <string name="tab_index_page">前测</string>
    <string name="head_photo_too_small">头像图片大小不能小于%1$s, 请重新选择</string>
    <string name="load_pic_falied">图片读取失败</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_attend">添加关注</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_reservation_doctor">预约医生</string>
    <string name="title_activity_reservation_date">预约时间</string>
    <string name="title_activity_reservation_history">预约记录</string>
    <string name="title_activity_doctor_list">医生列表</string>
    <string name="title_activity_consult_list">咨询记录</string>
    <string name="title_activity_user_info">个人信息</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="err_please_select_hospital">请先选择您要预约的生殖中心</string>
    <string name="err_please_select_reservation_type">请先选择预约类型</string>
    <string name="err_no_reservation_time">该时间段没有排班</string>
    <string name="err_please_select_reservation_date">请选择预约时间</string>
    <string name="err_please_select_reservation_doctor">请选择预约医生</string>
    <string name="reservation_success">预约成功</string>
    <string name="title_activity_hospital_page">主页</string>
    <string name="title_activity_attended_hospital">关注中心</string>
    <string name="title_activity_attent_doctor_list">关注医生</string>
    <string name="title_activity_doctor_detail">DoctorDetailActivity</string>
    <string name="title_activity_id_card">身份证号</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_real_name">姓名</string>
    <string name="title_activity_consult_detail">咨询详情</string>
    <string name="title_activity_archives">档案病历</string>
    <string name="title_activity_treat_history">治疗历史</string>
    <string name="title_activity_daily_tasks">每日任务</string>
    <string name="title_activity_doctor_advice">医嘱处方</string>
    <string name="title_activity_check_list">检查化验</string>
    <string name="tips_build_archives">如果您想进入某生殖中心就诊，但是还未曾建立档案，我们可以为您提前帮你向生殖中心申请建档，节省您到现场建档的时间。</string>
    <string name="title_activity_my_archives">我的档案</string>
    <string name="red_star"><Data><![CDATA[%1$s <font color="red">*</font>]]></Data></string>
    <string name="content_too_long">字数超出上限</string>
    <string name="content_input_null">内容不能为空！</string>
    <string name="content_input_blank">内容不能为全空格！</string>
    <string name="content_input_email">邮箱格式不正确！</string>
    <string name="content_input_cell_phone">手机号码格式不正确！</string>
    <string name="content_input_land_line">电话号码格式不正确！</string>
    <string name="content_input_profession">职业不能为空！</string>
    <string name="success_operate">操作成功！</string>
    <string name="cell_phone_input">请输入您的手机号码</string>
    <string name="land_line_input">请输入您的电话号码 格式为010-66666666</string>
    <string name="hint_name_input">请输入您的真实姓名</string>
    <string name="hint_profession_input">请输入您的职业</string>
    <string name="hint_idcard_input">请输入您的身份证号码</string>
    <string name="hint_birthplace_input">请输入您的籍贯</string>
    <string name="hint_addr_input">请输入您的通讯地址</string>
    <string name="hint_post_code_input">请输入您的邮政编码</string>
    <string name="hint_case_person_input">请输入就诊人名字</string>
    <string name="hint_zhusu_input">请输入主诉</string>
    <string name="hint_exist_children_input">请输入现有子女数</string>
    <string name="hint_adopted_input">请输入领养子女数</string>
    <string name="hint_last_pregnant_input">请选择末次妊娠时间</string>
    <string name="hint_menarche_input">请选择初潮时间</string>
    <string name="hint_menstrual_cycle_input">请输入月经周期</string>
    <string name="hint_medical_history_input">请输入病史</string>
    <string name="hint_mecard_input">请输入就诊卡号</string>
    <string name="title_activity_my_case">我的病历</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="title_activity_chat_group_members">成员列表</string>
    <string name="title_activity_chat_group_detail">群资料</string>
    <string name="title_activity_chat_history">聊天记录</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="hint_medcard_input">请输入就诊卡号</string>
    <string name="title_activity_today_task">TodayTaskActivity</string>
    <string name="title_activity_my_hospital">就诊中心</string>
    <string name="title_activity_task_detail">任务详情</string>
    <string name="title_activity_advice_detail">处方详情</string>
    <string name="title_activity_good_news">喜报</string>
    <string name="title_activity_dynamic_detail">动态详情</string>
    <string name="title_activity_collect_detail">收藏详情</string>
    <string name="title_feedback">意见反馈</string>
    <string name="feedback_send_succeed">发送成功</string>
    <string name="title_activity_consult_doctor_list">选择医生</string>
    <string name="title_activity_image_preview">预览</string>
    <string name="title_activity_check_detail">检查化验详情</string>
    <string name="title_activity_big_image">查看图片</string>
    <string name="title_activity_exit_dialog">异地登录</string>
    <string name="err_please_select_reservation_category">请先选择号码类别</string>
    <string name="title_activity_knowledge">KnowledgeActivity</string>
    <string name="title_activity_out_reservation_history">预约挂号记录</string>
    <string name="title_activity_out_reservation_detail">挂号详情</string>
    <string name="title_activity_about">关于</string>
    <string name="about_page_copy_right">德生科技 版权所有\nCopyright © 2015. All Right Reserved.</string>
    <string name="title_activity_send_archive_history">建档申请记录</string>
    <string name="title_activity_pay_confirm">确认支付</string>
    <string name="minganci">
        口交=**,习近平=**,李克强=**,江泽民=**,胡锦涛=**,温家宝=**,习近平=**,习仲勋=**,贺国强=**,贺子珍=**,周永康=**,李长春=**,李德生=**,王岐山=**,姚依林=**,回良玉=**,李源潮=**,李干成=**,戴秉国=**,黄镇=**,刘延东=**,刘瑞龙=**,俞正声=**,薄一波=**,周小川=**,周建南=**,温云松=**,徐明=**,江泽慧=**,江绵恒=**,江绵康=**,李小鹏=**,李鹏=**,朱容基=**,六四=**,反共=**,共产党=***,fuck=***,李洪志=***,大纪元=***,真善忍=***,肉棍=***,淫靡=***,淫水=***,六四事件=***,出售枪支=****,迷药=***,摇头丸=****,PK黑社会=****,投毒杀人=****,出售假币=****,监听王=****,昏药=****,侦探设备=***,麻醉钢枪=***,反华=***,手机复制=***,蒙汗药粉=***,古方迷香=***,强效失意药=***,迷奸药=***,透视眼镜=***,远程偷拍=****,自制手枪=****,激情小电影=****,黄色小电影=****,天鹅之旅=****,催情药=****,拍肩神药=****,春药=****,身份证生成器=****,手枪=**,麻醉枪=****,办理证件=****,办理文凭=****,疆独=***,藏独=****,反政府=****,禁书=****,特码=****,成人=****,换妻=****,共匪=共框非,国民党=G·M·D,腐败=F·B,贪污=T·W,自慰=Z·W,淫荡=Y·D,骚妇=S·F,
台独=台反文旁虫,
法论功=三点水去论工力,
蒙汗药=***,激情电影=***,AV=***,十八禁=***,a片=***,性虐待=***,女优=***,18禁=***,激情=***,耽美=***,毛片=***,少儿不宜=***,隐形喷剂=***,反雷达测速=***,假币=***,代开发票=***,假钞=***,窃听=***,电话拦截系统=***,探测狗=***,手机卡复制器=***,监听王=***,手机跟踪定位器=***,监听器=***,针孔摄像=***,监听宝=***,三唑仑=***,迷幻药=***,手拍肩=***,迷魂香=***,摇头丸=***,麻古=***,政治风波=***,反政府=***,政府软弱=***,政府无能=***,暴力拆迁=***,人民报=***,天葬=***,轮奸=***,暴力镇压=***,陈水扁=***,达赖=***,共匪=***,天安门事件=***,性免费电影=***,全裸=***,偷拍=***,偷 拍=***,台独=***,修炼之歌=***,中央军委=***,梁保华=***,MC军团=***,旧民运=***,伪民运=***,采花堂=***,中国劳工通讯=***,反雷达测速=***,中共=**,共奴=***,共产=**,右派=***,流氓政府=***,原子弹制作简明教程=***,绝食抗议=***,内斗退党=***,退团=***,香港六合彩=***,退党=***,大法新闻社=***,白宫事件=***,六四=**,追查国际=***,弘法体=***,大法之声=***,江独裁=***,李屠夫=***,江恶人=***,江戏子=***,乙醚=***,党内分裂=***,新生网=***,圆明网=***,修炼之歌=***,发正念=***,大法大福=***,大硞弟子=***,大纪元=***,支联会=***,专政机器=***,大法洪传=***,法正人间=***,法正乾坤=***,报禁=***,党禁=***,全国退党=***,绝食抗暴=***,维权抗暴=***,活体器官=***,器官移植=***,正派民运=***,中华联邦政府=***,亲共行动=***,联邦政府=***,流氓民运=***,特务民运=***,江贼民=***,自由联邦=***,明慧周刊=***,麻古=***,色情=S***Q,
秘密文件=***,机密文件=***,红头文件=***,自焚=***,破网软件=***,无界浏览=***,黄色小说=***,H动漫=***,tmd=***,nnd=***,亚热=***,耽美=***,激情电影=***,禁播=***,H漫画=***,藏春阁=***,大禁=***,激情=***,少儿不宜=***,买春堂=***,隐私图片=***,卫星接收器=***,卫星电视=***,信号拦截器=***,香港GHB水=***,透视眼镜=***,法輪功=***,老虎机=***,轮盘机=***,百家乐=***,连线机=***,模拟机=***,彩票机=***,礼品机=***,一卡多号=***,最淫官员=***,偷电=***,盗电=***,学生暴动=***,镇压学生=***,自由亚州=***,人民报=***,明慧=***,挥发型迷药=***,喷雾型迷药=***,换妻=***,出售假币=***,淫间道=***,嫩穴=***,動乱=***,性奴=***,死亡笔记=***,二奶=***,2奶=***,代开普通发票=***,代开商品发票=***,代开国税发票=***,代开地税发票=***,代开广告发票=***,代开运输发票=***,代开租赁发票=***,代开维修发票=***,代开建筑发票=***,代开安装发票=***,代开餐饮发票=***,代开服务发票=***,代开发票=***,三唑仑=***,达赖=***,绕过封锁=***,新疆独立=***,西藏独立=***,新生网=***,新唐人=***,淫水=***,肉棍=***,自由亚州=***,大紀元=***,鸡吧=***,鸡巴=***,反中游行=***,支持台湾=***,退党=***,学生与警察=***,短信猫=***,车牌反光=***,次下跪=***,邪恶的党=***,出售迷药=***,针孔摄像机=***,灭绝罪=***,大揭露=***,突破封锁=***,多党执政=***,生成身份证=***,针孔摄像机=***,隐形耳机=***,隐形摄像头=***,国民党=***,粗口歌=***,激情电影=***,裸聊=***,女优=***,代考=**,假币=***,代开发票=***,英语枪手=***,电话拦截系统=***,探测狗=***,手机卡复制器=***,手机跟踪定位器=***,针孔摄像=***,仿真枪=***,考试作弊器=***,麻醉枪=***,开锁器=***,淫秽=yin*h,
三唑仑=***,k粉=***,共狗=***,诈骗信息=***,销售枪支=***,激情电影=***,性器官=***,夫妻作爱=***,夫妻做爱=***,三级片=**片,
应召女郎=***,强暴=***,性交=***,性生活=***,处男=***,性爱=***,奸杀=***,骚b=***,三级图片=***,淫乱=***,a级情片=***,强奸=***,香港伦理片=***,淫色漫画=***,淫片=***,叫春=***,性息=***,阴毛=***,淫虫=***,偷欢=***
    </string>
    <string name="title_activity_reservation_tips">预约须知</string>
    <string name="title_activity_guide_page">GuidePageActivity</string>
    <string name="title_activity_share">ShareActivity</string>
</resources>