<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView
        android:gravity="center"
        android:text="@string/tips_confirm"
        android:textColor="@color/normal_text_color"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="49dp" />
    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/tips_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textColor="#666666"
        android:textSize="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_cancel_tv"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_alignParentLeft="true"
            android:background="@drawable/gray_btn_sel"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/dialog_confirm_tv"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_alignParentRight="true"
            android:background="@drawable/red_btn_sel"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>