<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chengsi.weightcalc.activity.search.GroupActivity">

    <LinearLayout
        android:id="@+id/tab_area"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="#f9f9f9"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_front_measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:onClick="changeTab"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_index_page_sel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/tab_index_page"
                android:textColor="@color/tab_text_sel"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_mid_measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:onClick="changeTab"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_visit_sel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/tab_visit"
                android:textColor="@color/tab_text_sel"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_back_measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:onClick="changeTab"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_group_sel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/tab_group"
                android:textColor="@color/tab_text_sel"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_constant_measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:onClick="changeTab"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_group_sel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/tab_constant"
                android:textColor="@color/tab_text_sel"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_report"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:gravity="center"
            android:onClick="changeTab"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_me_sel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/tab_me"
                android:textColor="@color/tab_text_sel"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tab_area"
        android:background="@color/divider_color" />

    <FrameLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_divider">

    </FrameLayout>
</RelativeLayout>