<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/tv_phone_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:text="+86"
                    android:textColor="@color/text_74"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_reg_phone"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_toRightOf="@id/tv_phone_label"
                    android:background="@null"
                    android:drawablePadding="12dp"
                    android:hint="@string/text_login_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/text_5e"
                    android:textColorHint="@color/text_d9"
                    android:textSize="16dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/tv_valify_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:text="验证码"
                    android:textColor="@color/text_74"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_send_valify"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_storke_round_btn_sel"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingBottom="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingTop="8dp"
                    android:text="获取验证码"
                    android:textColor="@color/blue_btn_sel"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_reg_valify"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_toLeftOf="@id/tv_send_valify"
                    android:layout_toRightOf="@id/tv_valify_label"
                    android:background="@null"
                    android:hint="@string/text_reg_varify_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/text_5e"
                    android:textColorHint="@color/text_d9"
                    android:textSize="16dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/tv_pwd_label"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:text="密码"
                    android:textColor="@color/text_74"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_reg_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_toRightOf="@id/tv_pwd_label"
                    android:background="@null"
                    android:drawablePadding="12dp"
                    android:hint="@string/text_login_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColor="@color/text_5e"
                    android:textColorHint="@color/text_d9"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tv_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/red_btn_sel"
            android:duplicateParentState="false"
            android:gravity="center"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="19dp" />

    </LinearLayout>
</ScrollView>